2005-10-16  Elijah Newren  <newren@gmail.com>

	* src/window.c:
	(meta_window_new_with_attrs):
	(meta_window_apply_session_info):
	(meta_window_resize):
	(meta_window_move):
	(meta_window_move_resize):
	(meta_window_resize_with_gravity):
	(meta_window_configure_request):
	remove the debugging information added a couple commits ago; it was
	causing segfault when not running under Xnest (since all windows in
	my Xnest session had a frame); I think I found the big problem with
	these calls in the last commit, and I just don't think the extra
	debug spew is worth the extra effort anymore

2005-10-15  Elijah Newren  <newren@gmail.com>

	* src/constraints.c (constrain_partially_onscreen): I was supposed
	to determine the amount that the window was allowed to move off the
	screen, not the amount that was supposed to remain onscreen

	* src/window.c (meta_window_resize): a function for resizing
	probably shouldn't tell meta_window_move_resize_internal() that
	it's a pure move function, (meta_window_move): a function for
	moving probably shouldn't tell meta_window_move_resize_internal()
	that it's a pure resize function

	* constraints-ideas.txt: Note window.c bug fixed from above, but
	add another bug I discovered other than the constraints.c one also
	fixed above...

2005-10-15  Elijah Newren  <newren@gmail.com>

	* constraints-ideas.txt:

	Update with a couple TODOs and bugs found

	* src/boxes.[ch]: 

	(meta_rectangle_region_to_string):
	new function

	(meta_rectangle_resize_with_gravity):
	new function, moved here from constraints.c

	* src/constraints.c:

	(typedef ConstraintFunc):
	(static global variables all_constraints and all_constraint_names):
	(do_all_constraints):
	new stuff to allow redoing constraint calling to make it easier to
	have debugging information without making the code unreadable;

	(meta_window_constrain):
	move all the work to the new do_all_constraints() function, DON'T
	FORGET TO MAKE USE OF THE NEW CONSTRAINED POSITION THAT I SO